--- a/linkedlist/BUILD
+++ b/linkedlist/BUILD
@@ -13,3 +13,12 @@ cc_library(
           ":node"
         ]
 )
+
+cc_binary(
+  name = "main",
+  srcs = ["main.cc"],
+  deps =  [
+        ":linkedlist"
+      ],
+
+)
